Agregando las clases sucursal, controladorSucursal y medio cambios de productos en controladorProducto

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,7 +34,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.AnimatonClass.jar}:\
-    ${file.reference.NefAnimacion_v2.jar}
+    ${file.reference.NefAnimacion_v2.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
