--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,14 +28,18 @@ dist.jar=${dist.dir}/TiendaProyecto2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.AnimatonClass.jar=AnimatonClass.jar
+file.reference.JCarrierPigeon-1.3.jar=src/lib/JCarrierPigeon-1.3.jar
 file.reference.NefAnimacion_v2.jar=NefAnimacion_v2/NefAnimacion_v2.jar
+file.reference.timingframework-classic-1.1.jar=src/lib/timingframework-classic-1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.AnimatonClass.jar}:\
     ${file.reference.NefAnimacion_v2.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.JCarrierPigeon-1.3.jar}:\
+    ${file.reference.timingframework-classic-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
