--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.jar=${dist.dir}/TiendaProyecto2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.AnimatonClass.jar=AnimatonClass.jar
+file.reference.jcalendar-1.4.jar=src/lib/jcalendar-1.4.jar
 file.reference.JCarrierPigeon-1.3.jar=src/lib/JCarrierPigeon-1.3.jar
 file.reference.NefAnimacion_v2.jar=NefAnimacion_v2/NefAnimacion_v2.jar
 file.reference.timingframework-classic-1.1.jar=src/lib/timingframework-classic-1.1.jar
@@ -39,7 +40,8 @@ javac.classpath=\
     ${file.reference.NefAnimacion_v2.jar}:\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.JCarrierPigeon-1.3.jar}:\
-    ${file.reference.timingframework-classic-1.1.jar}
+    ${file.reference.timingframework-classic-1.1.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
