--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,7 +45,8 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.JCarrierPigeon-1.3.jar}:\
     ${file.reference.timingframework-classic-1.1.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${libs.JasperR.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
