--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,7 +46,7 @@ javac.classpath=\
     ${file.reference.JCarrierPigeon-1.3.jar}:\
     ${file.reference.timingframework-classic-1.1.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${libs.JasperR.classpath}
+    ${libs.JasperReports_2.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
