--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,9 +30,20 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.AnimatonClass.jar=AnimatonClass.jar
+file.reference.commons-beanutils-1.8.2.jar=src/lib/libReportes/commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=src/lib/libReportes/commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=src/lib/libReportes/commons-digester-2.1.jar
+file.reference.commons-javaflow-20060411.jar=src/lib/libReportes/commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.1.jar=src/lib/libReportes/commons-logging-1.1.1.jar
+file.reference.groovy-all-1.7.5.jar=src/lib/libReportes/groovy-all-1.7.5.jar
+file.reference.iText-2.1.7.jar=src/lib/libReportes/iText-2.1.7.jar
+file.reference.jasperreports-4.7.1.jar=src/lib/libReportes/jasperreports-4.7.1.jar
+file.reference.jasperreports-javaflow-4.7.1.jar=src/lib/libReportes/jasperreports-javaflow-4.7.1.jar
 file.reference.jcalendar-1.4.jar=src/lib/jcalendar-1.4.jar
 file.reference.JCarrierPigeon-1.3.jar=src/lib/JCarrierPigeon-1.3.jar
 file.reference.NefAnimacion_v2.jar=NefAnimacion_v2/NefAnimacion_v2.jar
+file.reference.png-encoder-1.5.jar=src/lib/libReportes/png-encoder-1.5.jar
+file.reference.poi-3.7.jar=src/lib/libReportes/poi-3.7.jar
 file.reference.timingframework-classic-1.1.jar=src/lib/timingframework-classic-1.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -46,7 +57,18 @@ javac.classpath=\
     ${file.reference.JCarrierPigeon-1.3.jar}:\
     ${file.reference.timingframework-classic-1.1.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${libs.JasperReports_2.classpath}
+    ${libs.JasperReports_2.classpath}:\
+    ${file.reference.jasperreports-4.7.1.jar}:\
+    ${file.reference.jasperreports-javaflow-4.7.1.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.groovy-all-1.7.5.jar}:\
+    ${file.reference.iText-2.1.7.jar}:\
+    ${file.reference.png-encoder-1.5.jar}:\
+    ${file.reference.poi-3.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
